syntax = "proto3";
option java_package = "com.massimodz8.collaborativegrouporder.protocol";
option cc_enable_arenas = true;
package collaborativeGroupOrder;
import "google/protobuf/timestamp.proto";

// A monster book holds templates for monsters.
// Those monsters are never referenced unless on creation, their data is copied as required
// so the book itself can change data or shuffle it and I have no issues. This increases network BW usage
// but streamlines management as I have no problems with reference coherency.
// A monster book is simply an array of monsters in some order.

message MonsterBook {
	google.protobuf.Timestamp created = 1;
	repeated Entry entries = 2;
	
	// What is an 'entry' in a monster list? It is a 'monster' and its 'similar' monsters, which are monsters with
	// the same name but a different 'variation' list. The first monster is therefore special as it provides names
	// common to all 'variated' monsters. Do not confuse this with 'group', which is basically viz aid.
	message Entry {
		Monster main = 1;
		repeated Monster variations = 2;
	}
}


message Monster {
	Header header = 1;
	
	message Header {
		repeated string name = 1; // if variation monster, additional names WRT basic, otherwise must count at least 1. Empty strings invalid.
		ChallangeRatio cr = 2;
		repeated Alignment alignment = 3; // at least 1, nonrepeated
		MonsterSize size = 4;
		MonsterType type = 5;
		int32 initiative = 6;
		
		// Optional
		string example = 7;
		//Race race = NOPE; // That's a tag!
		repeated Tag tags = 8;
		//repeated ExtraTemplate templates = NOPE; // again, unified in tags
	}
	
	message ChallangeRatio {
		uint32 numerator = 1; // must be at least 1.
		uint32 denominator = 2; // if numerator === 1 can be 8|6|4|3|2|1 else must be 1
	}
	
	// There are two types of tags. "Real" tags are usually provided after the 'monster type' in manuals, usually between ().
	// The former is provided by TagType.CANON, the latter is extra info I have extracted and added by other means.
	enum TagType {
		TT_INVALID = 0;
		
		TT_CANON = 1; // Standard stuff that really goes between (...) even in manuals
		TT_AUGMENTING = 2; // this is a special CANON tag which also takes data
		TT_RACE = 3;
		TT_EXTRA_TEMPLATE = 4;
	}
	
	message Tag {
		TagType type = 1;
		CanonicalTag canon = 2; // type == CANON
		MonsterType augmenting = 3; // type == AUGMENTING, can be INVALID_MONSTER_TYPE for 'unspecified' yes, it happens!
		Race race = 4; // type == RACE
		ExtraTemplate extraTemplate = 5; // type == EXTRA_TEMPLATE
	}
}


enum Race { // String to enum: make all caps, replace ' '->'_' and '-'->'--'
	INVALID_RACE = 0;
	// Core
	DWARF = 1;
	ELF = 2;
	GNOME = 3;
	HALF_ORC = 4;
	HALFLING = 5;
	HUMAN = 6;
	// Featured
	AASIMAR = 7;
	CATFOLK = 8;
	DHAMPIR = 9;
	DROW = 10;
	FETCHLING = 11;
	GOBLIN = 12;
	HOBGOBLIN = 13;
	IFRIT = 14;
	KOBOLD = 15;
	ORC = 16;
	OREAD = 17;
	RATFOLK = 18;
	SYLPH = 19;
	TENGU = 20;
	TIEFLING = 21;
	UNDINE = 22;
	// Standard
	GNOLL = 23;
	LIZARDFOLK = 24;
	MONKEY_GOBLIN = 25;
	SKINWALKER = 26;
	TRIAXIAN = 27;
	// Advanced 
	ANDROID = 28;
	GATHLAIN = 29;
	GHORAN = 30;
	KASATHA = 31;
	LASHUNTA = 32;
	SHABTI = 33;
	SYRINX = 34;
	WYRWOOD = 35;
	WYVARAN = 36;
	// Monstrous
	CENTAUR = 37;
	OGRE = 38;
	SHOBHAD = 39;
	TROX = 40;
	// Very powerful
	DRIDER = 41;
	GARGOYLE = 42;
	// uncommon
	CHANGELING = 43;
	DUERGAR = 44;
	GILLMEN = 45;
	GRIPPLY = 46;
	KITSUNE = 47;
	MERFOLK = 48;
	NAGAJI = 49;
	SAMSARAN = 50;
	STRIX = 51;
	SULI = 52;
	SVIRFNEBLIN = 53;
	VANARA = 54;
	VISHKANYA = 55;
	WAYANG = 56;
	// unknown race points
	AQUATIC_ELF = 57;
	ASTMOI = 58;
	CALIGNI = 59;
	DEEP_ONE_HYBRID = 60;
	GANZI = 61;
	KURU = 62;
	MANAVRI = 63;
	ORANG__PENDAK = 64;
	REPTOID = 65;
}


enum ExtraTemplate {
	INVALID_TEMPLATE = 0;
	
	ADVANCED = 1;
	GIANT = 2;
	MIGHTY = 3;
	SHRINE__BLESSED = 4;
	NOCTURNAL = 5;
};


enum Alignment {
	INVALID_ALIGNMENT = 0;
	
	LEGAL_GOOD = 1;
	LEGAL_NEUTRAL = 2;
	LEGAL_EVIL = 3;
	NEUTRAL_GOOD = 4;
	JUST_NEUTRAL = 5;
	NEUTRAL_EVIL = 6;
	CHAOTIC_GOOD = 7;
	CHAOTIC_NEUTRAL = 8;
	CHAOTIC_EVIL = 9;
	
	ALIGNMENT_RESTRICTED = 10;
	ALIGNMENT_AS_CREATOR = 11;
};

enum MonsterSize {
	INVALID_MONSTER_SIZE = 0;
	
	FINE = 1;
	DIMINUTIVE = 2;
	TINY = 3;
	SMALL = 4;
	MEDIUM = 5;
	LARGE = 6;
	HUGE = 7;
	GARGANTUAN = 8;
	COLOSSAL = 9;		
}


enum MonsterType {
	INVALID_MONSTER_TYPE = 0;
	
	ABERRATION = 1;
	ANIMAL = 2;
	CONSTRUCT = 3;
	DRAGON = 4;
	FEY = 5;
	HUMANOID = 6;
	MAGICAL_BEAST = 7;
	MONSTROUS_HUMANOID = 8;
	OOZE = 9;
	OUTSIDER = 10;
	PLANT = 11;
	UNDEAD = 12;
	VERMIN = 13;
};


enum CanonicalTag {
	CT_INVALID = 0;
	// "Augmented magical beast" --> needs extra data, goes to AUGMENTING
	
	CT_AQUATIC = 1;
	CT_DEVIL = 2;
	CT_EVIL = 3;
	CT_EXTRAPLANAR = 4;
	CT_LAWFUL = 5;
	CT_SWARM = 6;
	CT_NATIVE = 7;
	CT_AIR = 8;
	CT_GIANT = 9;
	CT_CHAOTIC = 10;
	CT_DEMON = 11;
	CT_FIRE = 12;
	CT_ASURA = 13;
	CT_ADLET = 14;
	CT_COLD = 15;
	CT_WATER = 16;
	CT_EARTH = 17;
	CT_SHAPECHANGER = 18;
	CT_INCORPOREAL = 19;
	CT_ELEMENTAL = 20;
	CT_DIV = 21;
	CT_AEON = 22;
	CT_FUNGUS = 23;
	CT_PSIONIC = 24;
	CT_INEVITABLE = 25;
	CT_HERALD = 26;
	CT_ANGEL = 27;
	CT_GOOD = 28;
	CT_ONI = 29;
	CT_KYTON = 30;
	CT_AGATHION = 31;
	CT_BOGGARD = 32;
	CT_AZATA = 33;
	CT_GOBLINOID = 34;
	CT_REPTILIAN = 35;
	CT_CHARAU__KA = 36;
	CT_CLOCKWORK = 37;
	CT_DARK_FOLK = 38;
	CT_BEHEMOTH = 39;
	CT_DERRO = 40;
	CT_KAMI = 41;
	CT_ACID = 42;
	CT_GRAVITY = 43;
	CT_HUMANOID = 44;
	CT_LESHY = 45;
	CT_GNOLL = 46;
	CT_ARCHON = 47;
	CT_GNOME = 48;
	CT_KUAH__LIJ = 49;
	CT_ELECTRICITY = 50;
	CT_ROBOT = 51;
	CT_NIGHTSHADE = 52;
	CT_OGREN = 53;
	CT_OGRILLON = 54;
	CT_PROTEAN = 55;
	CT_PSYCHOPOMP = 56;
	CT_QLIPPOTH = 57;
	CT_RAKSHASA = 58;
	CT_SASQUATCH = 59;
	CT_DEMODAND = 60;
	CT_SKULK = 61;
	CT_TIME = 62;
	CT_FEYBLOOD = 63;
	CT_VAPOR = 64;
	CT_TENGU = 65;
	CT_HORDE = 66;
	CT_AMPHIBIOUS = 67;
	CT_GOBLIN = 68;
	CT_STORMWARDEN = 69;
	CT_TABAXI = 70;
	CT_GODSPAWN = 71;
};
